docs: swagger of /users api
